Changed font size to make it more readable

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "asean logo.png",
+      "src": "asean_logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "asean logo.png",
+      "src": "asean_logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
